<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_thisweek">

    <fragment
        android:id="@+id/nav_thisweek"
        android:name="de.berstanio.personaldsb.ui.thisweek.ThisWeekFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_thisweek" />

    <fragment
        android:id="@+id/nav_nextweek"
        android:name="de.berstanio.personaldsb.ui.nextweek.NextWeekFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_nextweek" />

    <fragment
        android:id="@+id/nav_freerooms"
        android:name="de.berstanio.personaldsb.ui.freerooms.FreeRoomsFragment"
        android:label="@string/menu_freerooms"
        tools:layout="@layout/fragment_freerooms"/>

    <fragment
        android:id="@+id/nav_readplan"
        android:name="de.berstanio.personaldsb.ui.loadplan.PlanLoadFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_readplan" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="de.berstanio.personaldsb.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>
</navigation>